gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: web-app-gateway
spec:
  selector:
    istio: ingressgateway  # usamos es istio como gateway de ingreso
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-app
spec:
  hosts:
  - "*"
  gateways:
  - web-app-gateway
  http:
  - match:
      - uri:
          prefix: /
    route:
    - destination:
        host: web-app-service  # nombre del servicio
        port:
          number: 80
